# bigd

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml  deploy.yml
cmake/: BIGDConfig.cmake.in
src/: CMakeLists.txt
test_package/: CMakeLists.txt  conanfile.py  main.c
